Chapter-6-Services_Networking/ingress/deployment.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: nginx-ingress-controller-deployment
spec:
  template:
    metadata:
      name: nginx-ingress-controller
      labels:
        app: nginx-ingress
    spec:
      containers:
        - image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.21.0
          name: nginx-ingress-controller
          args:
            - /nginx-ingress-controller
            - --configmap=$(POD_NAMESPACE)/nginx-configuration
          ports:
           - name: http
             containerPort: 80
           - name: https
             containerPort: 443
            


  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
