Chapter-6-Services_Networking/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-service
spec:
  selector:
    app: nginx-ingress
  type: NodePort    
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 443
      name: https
