Chapter-6-Services_Networking/ingress/rewrite-backend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: critical-space
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /pay
            pathType: ImplementationSpecific
            backend:
              serviceName: pay-service
              servicePort: 8080
